--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-helo js world
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Js Rockets</title>
+	<script type="text/javascript" src="js/script.js">
+	</script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+<h1>Hello Js rocet</h1>
+<a href="#" onclick="doCoolStuff();">Click Me</a>
+<div class="cool red" id="cool">
+<p>Hello I'm cool</p>
+</div>
+</body>
+</html>
